Updates Employee Controller post review. Adds mappers for both Entity/Model pairs. Adds Validation on controller DTO